some homepage styling

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,18 +3,18 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 245, 181, 220;
+  --background-start-rgb: 0, 0, 0;
+  --background-end-rgb: 0, 0, 0;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -31,3 +31,20 @@ body {
     text-wrap: balance;
   }
 }
+
+
+@keyframes blink{
+  0%{border-right: .15em solid transparent;}
+  50%{border-color:rgb(245, 181, 220); border-right: .15em solid;}
+}
+
+#blink_text{	
+  animation-name:blink;
+  animation-duration:1s;
+  animation-iteration-count:Infinite;
+  animation-timing-function: steps(1);
+  }
+
+  .dropdown:hover .dropdown-menu {
+    display: block;
+  }
